proper way to provide the data